feat: 상품 중복 검증